--- a/src/css/tailwind/_components.css
+++ b/src/css/tailwind/_components.css
@@ -1,1 +1,5 @@
 @import "tailwindcss";
+
+.dark input[type="date"]::-webkit-calendar-picker-indicator {
+  filter: invert(1); /* Membalik warna agar putih di dark mode */
+}
