--- a/src/css/tailwind/_components.css
+++ b/src/css/tailwind/_components.css
@@ -3,3 +3,7 @@
 .dark input[type="date"]::-webkit-calendar-picker-indicator {
   filter: invert(1); /* Membalik warna agar putih di dark mode */
 }
+
+.dark input[type="month"]::-webkit-calendar-picker-indicator {
+  filter: invert(1); /* Membalik warna agar putih di dark mode */
+}
